# web2sdk

./: .gitignore  LICENSE  README.md  pyproject.toml
api2sdk/: main.py  pyproject.toml  specs2.yml
api2sdk/api2swagger/: main.py  test_openapi_compliance.py  testing_util.py
api2sdk/swagger2sdk/: generate_function.py  generate_types.py  main.py  types.py  utils.py
web2sdk/: console_util.py  main.py  pyproject.toml
web2sdk/swagger2sdk/: generate_function.py  generate_types.py  main.py  utils.py
web2sdk/web2swagger/: main.py
